fixes issue where nodes would not misplaced in the stratified layout - changes demo graphs to be more readable

--- a/demo/app.css
+++ b/demo/app.css
@@ -8,19 +8,19 @@
 
 #default-layout {
   height: 800px;
-  width: 100%;
+  width: 90%;
   border: 1px solid;
 }
 
 #signalling-layout {
   height: 800px;
-  width: 100%;
+  width: 90%;
   border: 1px solid;
 }
 
 #cose-bilkent-layout {
   height: 800px;
-  width: 100%;
+  width: 90%;
   border: 1px solid;
 }
 
